primer proyecto html

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="css/styles.css"/>
     </head>
     <body> 
-        <p>Hola mundo</p>>
+        <h1>Este es el título</h1>
+        <p>Hola mundo</p>
     </body>
 </html>
