Commit al master del blogpost

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,14 @@
         <link rel="stylesheet" href="css/styles.css"/>
     </head>
     <body> 
-        <h1>Este es el título</h1>
-        <p>Hola mundo</p>
+        <div id="container">
+            <div id="post">
+                <h1>Nuevo post de prueba de ramas</h1>
+                <p>Lorem ipsum ljklj asldjkfkl kljasdfj lkjas kljasdfj
+                    asdlkfjasdf
+                    kljasdfkjdsf
+                </p>
+            </div>
+        </div>
     </body>
 </html>
