--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
     </head>
     <body> 
         <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <div id="post">
                 <h1>Nuevo post de prueba de ramas</h1>
                 <p>Lorem ipsum ljklj asldjkfkl kljasdfj lkjas kljasdfj
