--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body> 
         <div id="container">
             <div id="cabecera">
-                Hyperblog<span id="tagline"> Tu blog </span>
+                Hyperblog<span id="tagline"> Tu blog maestro</span>
             </div>
             <div id="post">
                 <h1>Nuevo post de prueba de ramas</h1>
