--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
             <div id="post">
                 <h1>Nuevo post de prueba de ramas</h1>
                 <p>Lorem ipsum ljklj asldjkfkl kljasdfj lkjas kljasdfj
-                    asdlkfjasdf
+                    NUEVA PRUEBA DE GITHUB
                     Esta es una prueba para github
                 </p>
                 <p>Tu eres mi amor mi dicha y mi tesoro, mi solo encanto y mi ilusión</p>
