logo y cambio de colores

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,9 @@
     <body> 
         <div id="container">
             <div id="cabecera">
-                Hyperblog<span id="tagline"> Mi blog, tu blog, nuestro blog </span>
+                <img id="logo" src="imagenes/Isabel Montero home.jpg">
+                Hyperblog
+                <span id="tagline"> Mi blog, tu blog, nuestro blog </span>
             </div>
             <div id="post">
                 <h1>Nuevo post de prueba de ramas</h1>
