--- a/blogpost.html
+++ b/blogpost.html
@@ -14,8 +14,9 @@
                     asdlkfjasdf
                     Esta es una prueba para github
                 </p>
-                <p>Tu eres mi amor mi dicha y mi tesoro, mi solo encanto y mi ilusión</p>
-                <p>Dale like</p>
+                <div id="footer">
+                    <p>Dale like</p>
+                </div>
             </div>
         </div>
     </body>
