--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
             </div>
             <div id="post">
                 <h1>Nuevo post de prueba de ramas</h1>
-                <p>Lorem ipsum ljklj asldjkfkl kljasdfj lkjas kljasdfj
+                <p>Lorem ipsum 
                     NUEVA PRUEBA DE GITHUB
                     Esta es una prueba para github
                 </p>
